fix for IE align center

--- a/app.css
+++ b/app.css
@@ -92,7 +92,8 @@ html, body {
 }
 
 .board {
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 128px;
 }
 
